fix: update health synchronization method to use Math.clamp for improved accuracy; add DebugCommands for nearby villager queries